fix: outlet left spacing

--- a/src/features/Navigation/navigation.module.css
+++ b/src/features/Navigation/navigation.module.css
@@ -53,7 +53,6 @@
 }
 
 .slot-nav-container {
-  will-change: width;
   transition: width 0.3s;
   box-sizing: border-box;
 }
